<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">RuzenaFit</string>
    <string name="startstop_start">Start</string>
    <string name="startstop_stop">Stop</string>
    <string name="runstatus_stopped">Current status: Not Running</string>
    <string name="runstatus_started">Current status: Running</string>
    <string name="service_name">CalFitBCN Service</string>
    <string name="server_addr">CalFitBCN server address:</string>
    <string name="server_addr_default">http://edmundseto_calfitd.dyndns.org</string>
    <string name="kcallabel">Total kcal: </string>
    <string name="kcalvalue">0.0</string>
    <string name="dataexplain">CalFit uses GPS and 3-axis accelerometry to evaluate energy expenditure.\n\nThis CalFit \"D\" version \"data-logs\" how much, and where you exercise to a file, \"calfitdatalog.txt\" on the memory card. Data are sent in an anonymous fashion to researchers at UC Berkeley.\n\nFor more information, and to visit our website, press the menu key on the device, followed by About.</string>
    <string name="smsdetail">Share your exercise results with friends and family.</string>
    <string name="sms">SMS</string>
    <string name="view">view</string>
    <string name="map">map</string>
    <string name="delete">delete</string>
    <string name="help">help</string>
    <string name="user">user: </string>
    <string name="imei">imei</string>
    <string name="low">Low</string>
    <string name="mid">Medium</string>
    <string name="high">High</string>
    <string name="chart_prompt">Choose a chart</string>
    <string name="about">About</string>
    <string name="version">v 1.0</string>
    <!-- <string name="about_box">Copyright ©2010. The Regents of the University of California (Regents). All Rights Reserved. Permission to use, copy, modify, and distribute this software and its documentation for educational, research, and not–for–profit purposes, without fee and without a signed licensing agreement, is hereby granted, provided that the above copyright notice, this paragraph and the following two paragraphs appear in all copies, modifications, and distributions. Contact The Office of Technology Licensing, UC Berkeley, 2150 Shattuck Avenue, Suite 510, Berkeley, CA 94720-1620, (510) 643-7201, for commercial licensing opportunities.\n\nCreated by Edmund Seto (seto@berkeley.edu), Irving Lin, Curtis Wang, and Michael Roy.\n\nIN NO EVENT SHALL REGENTS BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF REGENTS HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nREGENTS SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE AND ACCOMPANYING DOCUMENTATION, IF ANY, PROVIDED HEREUNDER IS PROVIDED "AS IS". REGENTS HAS NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.</string> -->
    <string name="about_box">Something about Copyright here… =X</string>
    <string name="moreinfo">Online help and info</string>
    <string name="hello">Hello World, HomeActivity!</string>
    <string name="app_name">RuzenaFit</string>
    <string name="tracking">Tracking</string>
    <string name="ranking">Rankings</string>
    <string name="preferences">Privacy Preferences</string>
    <string name="main_menu">Main Menu</string>
    <string name="pref_text">Click a button to change the text.</string>
    <string name="pref_low">Low Preferences</string>
    <string name="pref_mid">Medium Preferences</string>
    <string name="pref_high">High Preferences</string>
    <string name="submit_data">Submit Data</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="settings">Facebook Settings</string>
    <string name="username"></string>
    <string name="pSettings">none</string>

</resources>