<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="#1C2045"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/main_menu"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <Button
        android:id="@+id/button1"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="42dp"
        android:text="@string/tracking"
        android:textColor="#1C2045" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="29dp"
        android:text="@string/ranking" 
        android:textColor="#1C2045"/>


    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button5"
        android:layout_marginTop="33dp"
        android:text="@string/preferences" 
        android:textColor="#1C2045"/>
    <TextView android:id="@+id/main" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:gravity="center" android:padding="25dp" android:text="@string/main_menu" android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/Button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="30dp"
        android:text="@string/settings"
        android:textColor="#1C2045" />

</RelativeLayout>