<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
	<TextView        
		android:id="@+id/title"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dip"		
        android:text="@string/app_name"/>

	<RelativeLayout
		android:id="@+id/mid_layout"
		android:layout_width="fill_parent"
		android:layout_height="120dip"
        android:layout_below="@id/title"		
		>
		<ToggleButton android:id="@+id/togglebutton"
		    android:layout_width="wrap_content"
		    android:textOn="Datalogging is currently on"
		    android:textOff="Datalogging is currently off"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true" 
			android:layout_height="50dip"/>
	</RelativeLayout>


	<RelativeLayout 
		android:id="@+id/left_box"
		android:layout_height="170dip"
		android:layout_width="160dip" 		
		android:layout_alignParentLeft="true"		
		android:layout_below="@+id/mid_layout" 
		>
			<TextView        
				android:id="@+id/user"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
		        android:text="@string/user"
				android:layout_marginTop="17dip"		
				android:layout_marginLeft="5dip"
				/>
			<TextView        
				android:id="@+id/imei"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
		        android:text="@string/imei"
				android:layout_marginTop="17dip"		
				android:layout_marginLeft="10dip"
				android:layout_toRightOf="@+id/user"/>
	</RelativeLayout>


	<RelativeLayout 
		android:id="@+id/line"
		android:layout_height="170dip"
		android:layout_width="2dip" 		
		android:background="#aaaaaa"
		android:layout_toRightOf="@+id/left_box"
		android:layout_below="@+id/mid_layout"		
		>		
	</RelativeLayout>

	
	<RelativeLayout
		android:id="@+id/row1buttons_layout"
		android:layout_width="fill_parent"
		android:layout_height="90dip"
        android:layout_below="@+id/mid_layout"
        android:layout_toRightOf="@+id/line"		
		>
		<RelativeLayout 
			android:id="@+id/row2col2_layout"
			android:layout_toRightOf="@+id/row2col1_layout"
			android:layout_height="fill_parent"
			android:layout_width="70dip">
			<Button
		        android:id="@+id/helpbutton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:background="@drawable/ic_menu_help" 
		        android:layout_toRightOf="@id/helpbutton"
				android:layout_centerHorizontal="true"
		        />
			<TextView        
				android:id="@+id/title"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
		        android:text="@string/help"
				android:layout_below="@+id/helpbutton"
				android:layout_centerHorizontal="true"
				/>
		        
		</RelativeLayout>		        	
	</RelativeLayout>


	

</RelativeLayout>

