<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/mid_layout"
        android:layout_width="fill_parent"
        android:layout_height="120dip"
        android:layout_below="@id/title" >

        <ToggleButton
            android:id="@+id/togglebutton"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textOff="Datalogging is currently off"
            android:textOn="Datalogging is currently on" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/left_box"
        android:layout_width="160dip"
        android:layout_height="170dip"
        android:layout_alignBottom="@+id/line"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mid_layout" >

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="17dip"
            android:text="@string/user"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="17dip"
            android:layout_toRightOf="@+id/user"
            android:text="@string/imei"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line"
        android:layout_width="2dip"
        android:layout_height="170dip"
        android:layout_alignBottom="@+id/row1buttons_layout"
        android:layout_below="@+id/mid_layout"
        android:layout_toRightOf="@+id/left_box"
        android:background="#aaaaaa" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row1buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_below="@+id/mid_layout"
        android:layout_toRightOf="@+id/line" >

        <RelativeLayout
            android:id="@+id/row2col2_layout"
            android:layout_width="70dip"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/row2col1_layout" >

            <Button
                android:id="@+id/helpbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/helpbutton"
                android:background="@drawable/ic_menu_help"
                android:padding="10dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/helpbutton"
                android:layout_centerHorizontal="true"
                android:text="@string/help"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Username: "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/left_box"
        android:layout_marginTop="28dp"
        android:text="Privacy Setting: "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:text="blank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/pSettings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
